--- a/index.html
+++ b/index.html
@@ -9,7 +9,23 @@
         <h1>A heading 1 &#35; &nbsp;&nbsp;&nbsp;&nbsp;n</h1>
         <h2>A heading 2</h2>
         <br>
-        <br><br><br>
+        <br><br>
+        <blockquote>This is text indented inside a block quote</blockquote>
+        <blockquote>This is bold indented text inside a block quote</blockquote>
+        
+        <b>This text is bold.</b>
+        <strong>This text is also bold (strong).</strong> blah blah blah...<i>this is italicized text.</i> <i><b>This is italicized and bolded text!</b></i> <mark>This highlights text!</mark> King Edward III... Taco Bell <sup>TM</sup> or we can subscript things like this: P<sub>n</sub> is used in math! 
+        <ol>
+            <li>Item number 1</li>
+            <li> 2<sup>nd</sup> item</li>
+            <li><b>3<sup>rd</sup> item with bold text</b></li>
+        </ol>
+        <ul>
+            <li>first item</li>
+            <li>second item</li>
+            <li>third item</li>
+        </ul>
+        
         <h3>A heading 3</h3>
         <h4>A heading 4</h4>
         <h5>A heading 5</h5>
