--- a/index.html
+++ b/index.html
@@ -19,11 +19,14 @@
             <li>Item number 1</li>
             <li> 2<sup>nd</sup> item</li>
             <li><b>3<sup>rd</sup> item with bold text</b></li>
+            <li>&copy; Time Magazine</li>
+            <li>Fifth item &gt; fourth item</li>
+            <li>Sixth item &amp; fifth item</li>
         </ol>
         <ul>
             <li>first item</li>
             <li>second item</li>
-            <li>third item</li>
+            <li><i><strong>third item</strong></i></li>
         </ul>
         
         <h3>A heading 3</h3>
